<resources>
    <string name="app_name">Patient</string>
    <string name="welcome_txt">Добро пожаловать</string>
    <string name="email">Логин</string>
    <string name="email.placeholder">example@gmail.com</string>
    <string name="phone">Номер клиента</string>
    <string name="phone.placeholder">+992 88 111 22 31</string>
    <string name="otp">Код</string>
    <string name="otp.placeholder">Ввести Код</string>
    <string name="password">Пароль</string>
    <string name="password.placeholder">Ввести пароль</string>
    <string name="login">Войти</string>
    <string name="login.btn.txt">ВОЙТИ</string>
    <string name="send.otp">Отправить код</string>
    <string name="approve.otp">Потвердить код</string>
    <string name="forgot.password">Забыли пароль?</string>
    <string name="error.fill.correctly">Пожалуйста, заполните поле корректно</string>
    <string name="error.empty">Пожалуйста, заполните поле</string>
    <string name="access">Разрешить</string>
    <string name="no.thanks">Нет, спасибо</string>
    <string name="make.photo">Сделать фото</string>
    <string name="take.photo">Выбрать изображение</string>
    <string name="select.from.gallery">Выбрать из галереи</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="reg.back.press.title">Хотите вернуться назад?</string>
    <string name="order_cour_need_permission">Для использования этого сервиса требуется разрешение</string>
    <string name="map_need_permission">Ранее вы отклонили разрешение. Чтобы включить перейдите в настройки приложения на вашем устройстве.</string>
    <string name="ok">Понятно</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="copy">Скопировать</string>
    <string name="copied">Скопировано</string>
    <string name="send">Отправить</string>
    <string name="rename">Переименовать</string>
    <string name="settings">Настройки</string>
    <string name="verify.client">Подтвердить клиента</string>
    <string name="next">Далее</string>
    <string name="forward">Продолжить</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom.search">Поиск</string>
    <string name="bottom.search.title">Ввод данных</string>
    <string name="bottom.help">Помощь</string>
    <string name="bottom.register">Регистрация</string>
    <string name="bottom.info">Контакты</string>
    <string name="sync.title">Синхронизация</string>
    <string name="sync.info">Для синхронизации доступно:</string>
    <string name="skip">Пропустить</string>
    <string name="filter">Фильтр</string>
    <string name="accept">Применить</string>
    <string name="fio">ФИО</string>
    <string name="ident.number">Идентификационный номер</string>
    <string name="passport.details">Паспортные данные</string>
    <string name="news.info">Инициирующее учреждение (ПМСП где беременная состоит на учете)</string>
    <string name="date.of.pastonavka">Дата постановки на учет по беременности</string>
    <string name="filial.type">Тип учреждения</string>
    <string name="fio.pregnant">ФИО беременной/роженицы</string>
    <string name="birthday">Дата рождения</string>
    <string name="register_title">Постановка беременной на учет (1-й дородовый визит)</string>
    <string name="region">Район</string>
    <string name="street">Джамоат</string>
    <string name="filial">Учреждение</string>
    <string name="age">Возраст</string>
    <string name="serial">Серия паспорта</string>
    <string name="address">Адрес по фактическому месту жительства</string>
    <string name="phone_number">Телефонный номер</string>
    <string name="phone_number_relative">Телефонный номер родственника на случай экстренного оповощения</string>
    <string name="date_first_sickness">1-й день последней менструации</string>
    <string name="date_second_sickness">Предполагаемая дата родов</string>
    <string name="number_of_child">Паритет (какие роды по счету)</string>
    <string name="existence">Предшествующее оперативное родоразрешение</string>
    <string name="register">Зарегистрировать</string>
    <string name="before_birth_registration">Регистрация дородовых посещений (ДРП)</string>
    <string name="first_analysis">1 - й осмотр беременной</string>
    <string name="second_analysis">2 - й осмотр беременной</string>
    <string name="date_first_analysis">1 - й осмотр беременной</string>
    <string name="emergency_title">Экстренное направление 1 в другое учреждение</string>
    <string name="date_of_transportation">Дата и время начала транспортировки</string>
    <string name="choose">Выбрать ...</string>
    <string name="reason_of_exportation">Диагноз/ причины направления</string>
    <string name="process_description">Лечение, проведенное ИУ, перед транспортировкой</string>
    <string name="nurse_description">Пол сопровождающего медработника</string>
    <string name="checkbox4">Транспорт предоставлен направляющим медучреждением?</string>
    <string name="checkbox3">Сопровождающий медработник</string>
    <string name="checkbox2">Выдано проектное направление</string>
    <string name="checkbox1">Женщина (и сопровождающие родственники) получили информацию о причинах и необходимости экстренного направления</string>
    <string name="reverse_registration">Регистрация обратного направления в ПМСП</string>
    <string name="subTitle">Принимающее учреждение ПМСП</string>
    <string name="checkbox5">получено обратное направление из роддома</string>
    <string name="checkbox6">1 - й осмотр беременной</string>
    <string name="checkbox7">Зарегистрирована материнская смертность</string>
    <string name="checkbox8">Зарегистрирована неонатальная смертность</string>
    <string name="death.title">Регистрация случаев неонатальной смертности (до 28 дней)</string>
    <string name="death_filial">Учреждение зарегистрировавшее случай материнской смертности</string>
    <string name="haours_after_death">На какие сутки после рождения была зарегистрирована неонатальная смертность?</string>
    <string name="death_reason">Причина неонатальной смертности (до 28 суток после рождения)</string>
    <string name="death_mother_reason">Причина материнской смертности</string>
    <string name="mismatch">fields don\'t match</string>
    <string name="patient">Пациент</string>
    <string name="language">Язык</string>
    <string name="russian">Русский</string>
    <string name="tajik">Таджикиский</string>
</resources>