<?xml version="1.0" encoding="utf-8"?>
<layout tools:context=".screens.register.RegisterFragment"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewModel"
                type="com.example.patient.screens.emergency.EmergencyViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@color/bg_color">
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_constraintTop_toTopOf="parent"
                app:title=""
                app:navigationIcon="@drawable/ic_back_texted" />



        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/headerWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">
            <ImageView
                    android:id="@+id/news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/ic_newspaper"
                    tools:ignore="ContentDescription" />
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    android:padding="10dp"
                    style="@style/blueRegular16"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/news"
                    android:text="@string/emergency_title"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/next"
                app:layout_constraintTop_toBottomOf="@+id/headerWrapper">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/contentWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">

                <TextView
                        android:id="@+id/labelFilial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/filial.type"
                        style="@style/label13"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/typeLayout"
                        style="@style/outlinedTextFieldDropdown"
                        app:hintEnabled="false"
                        app:endIconMode="dropdown_menu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/labelFilial">

                    <AutoCompleteTextView
                            android:id="@+id/typeField"
                            style="@style/digitRegular18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTintMode="screen"
                            android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                        android:id="@+id/labelDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/date_of_transportation"
                        style="@style/label13"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/typeLayout" />
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/date"
                        style="@style/outlinedTextField"
                        app:hintEnabled="false"
                        app:endIconMode="custom"
                        app:endIconDrawable="@drawable/ic_calendar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/labelDate"
                        >
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/dateField"
                            style="@style/digitRegular18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input"
                            android:paddingBottom="15dp"
                            android:maxLength="30"
                            android:text="@={viewModel.date}" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                        android:id="@+id/labelReason"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/reason_of_exportation"
                        style="@style/label13"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/date" />
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/reasonLayout"
                        style="@style/outlinedTextField"
                        app:hintEnabled="false"
                        app:endIconMode="clear_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/labelReason"
                        >
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/reasonField"
                            style="@style/digitRegular18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input"
                            android:paddingBottom="15dp"
                            android:maxLength="30"
                            android:text="@={viewModel.diagnose}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                        android:id="@+id/labelProcess"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/process_description"
                        style="@style/label13"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/reasonLayout" />
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/processLayout"
                        style="@style/outlinedTextField"
                        app:hintEnabled="false"
                        app:endIconMode="clear_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/labelProcess"
                        >
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/processField"
                            style="@style/digitRegular18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input"
                            android:paddingBottom="15dp"
                            android:maxLength="30"
                            android:text="@={viewModel.process}" />
                </com.google.android.material.textfield.TextInputLayout>
                <CheckBox
                        android:id="@+id/checkbox1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:layout_constraintTop_toBottomOf="@+id/processLayout"
                        android:text="@string/checkbox1"
                        style="@style/label13"/>
                <CheckBox
                        android:id="@+id/checkbox2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox1"
                        android:text="@string/checkbox2"
                        style="@style/label13"/>
                <CheckBox
                        android:id="@+id/checkbox3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox2"
                        android:text="@string/checkbox3"
                        style="@style/label13"/>
                <CheckBox
                        android:id="@+id/checkbox4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox3"
                        android:text="@string/checkbox4"
                        style="@style/label13"/>

                <TextView
                        android:id="@+id/labelNurse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/nurse_description"
                        style="@style/label13"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox4" />
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nurseLayout"
                        style="@style/outlinedTextField"
                        app:hintEnabled="false"
                        app:endIconMode="clear_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/labelNurse"
                        >
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nurseField"
                            style="@style/digitRegular18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input"
                            android:paddingBottom="15dp"
                            android:maxLength="30"
                            android:text="@={viewModel.nurse}" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


        <Button
                android:id="@+id/next"
                style="@style/stateEnabledButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/next"
                android:layout_marginBottom="15dp"
                android:enabled="true"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
