<?xml version="1.0" encoding="utf-8"?>
<layout tools:context=".screens.register.RegisterFragment"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewModel"
                type="com.example.patient.screens.beforebirth.BeforeBirthRegisterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@color/bg_color">
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:title=""
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_back_texted" />



        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/headerWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">
            <ImageView
                    android:id="@+id/news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/ic_newspaper"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    android:padding="10dp"
                    style="@style/blueRegular16"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/news"
                    android:text="@string/before_birth_registration"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/next"
                app:layout_constraintTop_toBottomOf="@+id/headerWrapper">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/contentWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">
                <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:checked="true"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/first_analysis"/>
                <TextView
                        android:id="@+id/labelDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/date_first_analysis"
                        style="@style/label13"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox" />
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/date"
                        style="@style/outlinedTextField"
                        app:hintEnabled="false"
                        app:endIconMode="custom"
                        app:endIconDrawable="@drawable/ic_calendar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/labelDate"
                        >
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/dateField"
                            style="@style/digitRegular18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input"
                            android:paddingBottom="15dp"
                            android:maxLength="30"
                            android:text="@={viewModel.date}" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                        android:id="@+id/checkbox1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:layout_constraintTop_toBottomOf="@+id/date"
                        android:text="@string/second_analysis"/>
                <TextView
                        android:id="@+id/labelDate2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/second_analysis"
                        style="@style/label13"
                        android:visibility="gone"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkbox1" />
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/dateSecond"
                        style="@style/outlinedTextField"
                        app:hintEnabled="false"
                        app:endIconMode="custom"
                        app:endIconDrawable="@drawable/ic_calendar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@+id/labelDate2"
                        >
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/secondDateField"
                            style="@style/digitRegular18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input"
                            android:paddingBottom="15dp"
                            android:maxLength="30"
                            android:text="@={viewModel.secondDate}" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


        <Button
                android:id="@+id/next"
                style="@style/stateEnabledButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/next"
                android:layout_marginBottom="15dp"
                android:enabled="true"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
