<?xml version="1.0" encoding="utf-8"?>
<layout tools:context=".screens.language.LanguageFragment"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@color/bg_color">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="-8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_back_texted" >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/titleBlackRegular20"
                    android:text="@string/language"/>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context=".screens.details.DetailFragment"
                    android:background="#E5E5E5">
                <TextView
                        android:id="@+id/russian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/russian"
                        style="@style/headlineBlackRegular16"
                        app:layout_constraintTop_toTopOf="parent"/>
                <ImageView
                        android:id="@+id/russianChecker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_vector_check"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/russian"
                        app:layout_constraintBottom_toBottomOf="@+id/russian"/>

                <View
                        android:id="@+id/line1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/ic_line"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/russian"/>
                <TextView
                        android:id="@+id/tajik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tajik"
                        android:layout_marginTop="20dp"
                        style="@style/headlineBlackRegular16"
                        app:layout_constraintTop_toBottomOf="@+id/line1"/>
                <ImageView
                        android:id="@+id/tajikChecker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tajik"
                        app:layout_constraintBottom_toBottomOf="@+id/tajik"/>

                <View
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/ic_line"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/tajik"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

